fix navbar alignment on homepage

--- a/src/styles/blogpost.css
+++ b/src/styles/blogpost.css
@@ -17,8 +17,8 @@
   align-items: start;
 }
 
-nav,
-.navlink {
+.blog-nav,
+.blog-navlink {
   text-decoration: none;
   align-self: flex-start;
   padding: 0.3rem;
